# triki-library-python

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: blink.py  data_readout.py  scanner.py
src/triki/: __init__.py  controller.py  exceptions.py  scanner.py  types.py
