[project]
name = "triki-library"
version = "0.1"
description = "A Python library for integrating the TRIKI motion controller (made by Caps Apps) into your projects."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Woofter_Wolf" }
]
keywords = ["bluetooth", "ble", "triki", "controller"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Hardware"
]
dependencies = [
    "bleak>=3.0.2",
]

[project.urls]
Homepage = "https://github.com/woofter-wolf/triki-library-python"
Repository = "https://github.com/woofter-wolf/triki-library-python"
Issues = "https://github.com/woofter-wolf/triki-library-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
      packages = ["src/triki"]